@startuml

package Models {
    class ScriptParameter {
        string Name
        string Description
        string DataType
    }

    class Script {
        string Id
        string Location
        string Name
        string Description
        []ScriptParameter InputParameters
        []ScriptParameter ExpectedResults
    }

    class WorkflowStep {
        string Id
        int StepId
        Script ScriptToExecute
        boolean Completed
        boolean InProgress
        map[string]string Parameters
        map[string]string Results
        boolean Success
        string Message
    }

    class Workflow {
        string Id
        string Name
        string Description
        WorkflowStep[] Steps        
    }

    class Execution {
        string Id 
        Workflow Flow
        int CurrentStepId
        map[string]string Context
    }
}

Script --> ScriptParameter
WorkflowStep --> Script
Workflow --* WorkflowStep
Execution --> Workflow

package Repositories {
    class WorkflowRepo {
        DeleteScript(id string) error
        SaveScript(item Script) error
        DeleteWorkflowStep(id string) error
        SaveWorkflowStep(item WorkflowStep) error
        DeleteWorkFlow(id string) error
        SaveWorkflow(item Workflow) error
        GetAllWorkflows() []Workflow, error
    }
}

WorkflowRepo --> Workflow
WorkflowRepo --> WorkflowStep
WorkflowRepo --> Script

package Logic {
    class Engine {
        RunWorkflow(flow Workflow) workflow, error
    }
}

Engine --> Workflow

@enduml